--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -1,16 +1,25 @@
-<section>
-  <p>
-    Since more than 6 years I build custom Websites each tailored to the specific need of the client.
+<section id="about">
+  <h2 class="section__title">About</h2>
 
-    Every website has the user in mind, is accessible, robust and easily maintanble.
+  <div class="about">
+    <p>
+      Since more than 6 years I build custom websites each tailored to the specific need of the individual client. Every website I build has the end user in mind, is accessible, robust and easily maintanble.
+    </p>
+    <p>
+      I offer help from the very beginning of a project with conceptualising, figuring out the target audience, wireframing, designing and can eventually build your website.
+      After launching I'm happy to help you maintaining the website in a sustainable and lasting way.
+    </p>
+    <p>
+      I work with clients from a lot of different sectors but especially 🤍 to work with Non Profit Organisations and clients from the cultural sector.
+    </p>
 
-    I can help you from the very beginning of a project with conceptualising, figuring out the target audience, wireframing, designing and eventually developing the website.
-    After launching the website I'm happy to help you maintaining the website in a sustainable and lasting way.
+    <!-- <p>
+      I love to collaborate with other designers and developers, in the past I had the pleasure to work amongst others with the following people and agencies: Moana Bischof (Designer), Julia Weiss (Designer), Webkinder (Webagency), About Blank (Designagency).
+    </p> -->
+    <p>
+      If you have something in mind I can help you with, drop me a line. I look forward to hear from you!
+    </p>
 
-    I work with clients from a lot of different sectors but do a lot of work for Non Profit Organisations and from the cultural sector.
-
-    If you have something in mind I can help you with, drop me a line. I look forward to hear from you!
-
-  </p>
+  </div>
 
 </section>
