--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -1,6 +1,5 @@
-<section>
+<section class="intro">
   <p>
-    Hey there. I'm here to make help you make your next great website. 
+    Hey there. I'm here to help you make your next great website.
   </p>
-
 </section>
