--- a/assets/sass/partials/_nav.scss
+++ b/assets/sass/partials/_nav.scss
@@ -6,8 +6,13 @@
     padding-left: var(--spacing-sm);
     display: flex;
 
+
     &:not(:last-child) {
       padding-right: var(--spacing-sm);
+    }
+
+    a {
+        pointer-events: auto;
     }
   }
 }
