--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -16,8 +16,8 @@
 </head>
 <body>
 
-	<svg width="44" height="39" xmlns="http://www.w3.org/2000/svg" id="pointer">
-		<path d="M39.04 3.39L23.07 34.15 4.85 9.07z" fill="#FFF" stroke="#FFF" stroke-width="4.5" fill-rule="evenodd"/>
+	<svg width="35" height="35" xmlns="http://www.w3.org/2000/svg" id="pointer">
+		<circle cx="205.5" cy="2256.5" r="15.5" transform="translate(-188 -2239)" fill="#FFF" stroke="#FFF" stroke-width="2.5" fill-rule="evenodd"/>
 	</svg>
 
 
