--- a/assets/scss/partials/_section.scss
+++ b/assets/scss/partials/_section.scss
@@ -1,9 +1,10 @@
 .section {
 
   &__title {
+    font-family: "Habitas-Medium";
     text-align: right;
     text-transform: uppercase;
     margin-bottom: var(--spacing-base);
-    margin-top: var(--spacing-md);
+    padding-top: var(--spacing-xxl);
   }
 }
