--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -8,16 +8,16 @@
 	<nav class="header__nav">
 		<ul class="nav">
 			<li class="nav__item">
-				<a href="#work">Work</a>
+				<a href="#work" class="hoverable nav__link">Work</a>
 			</li>
 			<li class="nav__item">
-				<a href="#about">About</a>
+				<a href="#about" class="hoverable nav__link">About</a>
 			</li>
 			<li class="nav__item">
-				<a href="#quotes">Quotes</a>
+				<a href="#quotes" class="hoverable nav__link">Quotes</a>
 			</li>
 			<li class="nav__item">
-				<a href="#contact">Contact</a>
+				<a href="#contact" class="hoverable nav__link">Contact</a>
 			</li>
 		</ul>
 	</nav>
