--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -11,22 +11,22 @@ body {
 
 
 h1 {
-  font-size: 1.6em;
+  font-size: var(--spacing-lg);
 }
 
 h2 {
-  font-size: 1.4em;
+  font-size: var(--spacing-md);
 }
 
 
 p {
-  font-size: 1em;
+  font-size: var(--spacing-base);
   line-height: 1.3;
   margin-bottom: var(--spacing-sm);
 }
 
 .text-large {
-  font-size: 1.333em;
+  font-size: var(--spacing-md);
 }
 
 a {
