--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -38,7 +38,7 @@ body {
   font-style: normal;
   cursor: none;
   // pointer-events: none;
-  padding: var(--spacing-sm);
+  padding: var(--spacing-base);
 }
 
 a, button {
