--- a/assets/scss/partials/_client.scss
+++ b/assets/scss/partials/_client.scss
@@ -64,6 +64,9 @@
     background-color: transparent;
     margin: 0;
     padding: 0;
+    will-change: transform;
+    font-size: var(--spacing-md);
+    transform-origin: center left;
 
     &:focus {
       outline: none;
@@ -75,7 +78,6 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    min-height: 30vw;
 
     &.hide {
       display: none;
