--- a/assets/scss/partials/_quotes.scss
+++ b/assets/scss/partials/_quotes.scss
@@ -3,27 +3,28 @@
   flex-direction: column;
 
   &__item {
-    max-width: 75vw;
+    max-width: 55vw;
     border: solid var(--white) 2px;
-    padding: var(--spacing-xs);
+    padding: var(--spacing-sm);
 
     &:first-child {
-      margin-bottom: var(--spacing-md);
+      margin-bottom: var(--spacing-lg);
       align-self: flex-end;
       padding-left: var(--spacing-xl);
       padding-bottom: var(--spacing-xxl);
-      margin-right: 3vw;
+      margin-right: 5vw;
     }
 
     &:nth-child(2) {
       padding-top: var(--spacing-xl);
       padding-right: var(--spacing-xxl);
-      margin-left: 2vw;
+      margin-left: 5vw;
     }
   }
 
   &__person {
     font-family: "Habitas-Medium";
     margin-top: var(--spacing-sm);
+    text-transform: uppercase;
   }
 }
