feat(accordion): get accordion to work

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -12,6 +12,7 @@
 @import "partials/intro.scss";
 @import "partials/client.scss";
 @import "partials/about.scss";
+@import "partials/video.scss";
 @import "partials/quotes.scss";
 @import "partials/contact.scss";
 @import "partials/footer.scss";
