--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -10,7 +10,7 @@
       After launching I'm happy to help you maintaining the website in a sustainable and lasting way.
     </p>
     <p>
-      I work with clients from a lot of different sectors but especially 🤍 to work with Non Profit Organisations and clients from the cultural sector.
+      I work with clients from a lot of different sectors but especially 🤍 to work with Non Profit Organisations and clients from the art and the cultural sector.
     </p>
     <p>
       If you have something in mind I can help you with, drop me a line. I look forward to hear from you!
