--- a/assets/scss/partials/_contact.scss
+++ b/assets/scss/partials/_contact.scss
@@ -5,7 +5,7 @@
   justify-content: center;
 
   &__msg {
-    font-size: var(--spacing-xxl);
+    font-size: 5vw;
     max-width: 80vw;
     margin-left: auto;
     margin-right: auto;
@@ -13,6 +13,7 @@
   }
 
   &__email {
+    font-size: 2vw;
     display: block;
     text-align: center;
   }
