--- a/assets/scss/partials/_quotes.scss
+++ b/assets/scss/partials/_quotes.scss
@@ -3,21 +3,21 @@
   flex-direction: column;
 
   &__item {
-    max-width: 55vw;
+    max-width: 75vw;
     border: solid var(--white) 2px;
     padding: var(--spacing-sm);
 
     &:first-child {
-      margin-bottom: var(--spacing-lg);
+      margin-bottom: var(--spacing-md);
       align-self: flex-end;
-      padding-left: var(--spacing-xl);
-      padding-bottom: var(--spacing-xxl);
+      padding-left: var(--spacing-lg);
+      padding-bottom: var(--spacing-xl);
       margin-right: 5vw;
     }
 
     &:nth-child(2) {
-      padding-top: var(--spacing-xl);
-      padding-right: var(--spacing-xxl);
+      padding-top: var(--spacing-lg);
+      padding-right: var(--spacing-xl);
       margin-left: 5vw;
     }
   }
