--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -1,5 +1,5 @@
 <section class="intro">
   <p>
-    Hey there. I'm here to help you make your next great website.
+    Hey there. I'm here to help you build your website.
   </p>
 </section>
