--- a/layouts/partials/work.html
+++ b/layouts/partials/work.html
@@ -19,18 +19,11 @@
             <a class="client__url" href="{{ .url }}" >View Website</a>
           </div>
 
-
-          <div class="client__video video">
-            <div class="plyr__video-embed" id="player">
-              <iframe
-                src={{ print "https://player.vimeo.com/video/" .video "?autoplay=1&loop=1&autopause=0&muted=1"}}
-                allowtransparency
-                allow="autoplay"
-              ></iframe>
+          <div class="video">
+            <div class="video__wrapper">
+              <iframe src="https://player.vimeo.com/video/{{ .video }}?title=0&byline=0&portrait=0&transparent=0&muted=1&loop=1&autopause=0&autoplay=1" width="640" height="480" frameborder="0" title="{{ .title }}" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" data-ready="true" allow="autoplay"></iframe>
             </div>
           </div>
-
-
         </div>
 
       </li>
