--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -17,7 +17,8 @@
   --spacing-xl: calc( var(--base-size) * (4 * var(--ratio) ) );
   --spacing-xxl: calc( var(--base-size) * (45* var(--ratio) ) );
 
-
+  --letter-spacing-base: 0.02em;
+  --letter-spacing-lg: 0.1em;
 }
 
 
