--- a/layouts/partials/work.html
+++ b/layouts/partials/work.html
@@ -15,11 +15,11 @@
         <div class="client__information hide" id='section_{{$.Scratch.Get "counter"}}'>
 
           <div class="client__textWrapper">
-            <p class="client__work">[ {{ .work }} ]</p>
-            <a class="client__url" href="{{ .url }}" >View Website</a>
+            <p class="client__work"> {{ .work }} </p>
+            <a class="client__url" href="{{ .url }}" target_="blank" >View Website</a>
           </div>
 
-          <div class="video">
+          <div class="video client__video">
             <div class="video__wrapper">
               <iframe src="https://player.vimeo.com/video/{{ .video }}?title=0&byline=0&portrait=0&transparent=0&muted=1&loop=1&autopause=0&autoplay=1" width="640" height="480" frameborder="0" title="{{ .title }}" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" data-ready="true" allow="autoplay"></iframe>
             </div>
