--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -3,7 +3,7 @@
 
   <div class="about">
     <p>
-      Since more than 6 years I build custom websites each tailored to the specific need of the individual client. Every website I build has the end user in mind, is accessible, robust and easily maintanble.
+      I build custom websites since more than 7 years each tailored to the specific need of the individual client. Every website I build has the end user in mind, is accessible, robust and easily maintanble.
     </p>
     <p>
       I offer help from the very beginning of a project with conceptualising, figuring out the target audience, wireframing, designing and can eventually build your website.
