--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -1,27 +1,3 @@
-:root {
-  --bg-color: #000;
-  --text-color: #fff;
-
-  --black: #000;
-  --white: #fff;
-
-
-  --ratio: 1.333;
-  --base-size: 1em;
-
-  --spacing-xs: calc( var(--base-size) / (2 * var(--ratio) ) );
-  --spacing-sm: calc( var(--base-size) / var(--ratio) );
-  --spacing-base: var(--base-size);
-  --spacing-md: calc( var(--base-size) * (2 * var(--ratio) ) );
-  --spacing-lg: calc( var(--base-size) * (3 * var(--ratio) ) );
-  --spacing-xl: calc( var(--base-size) * (4 * var(--ratio) ) );
-  --spacing-xxl: calc( var(--base-size) * (45* var(--ratio) ) );
-
-  --letter-spacing-base: 0.02em;
-  --letter-spacing-lg: 0.1em;
-}
-
-
 // Breakpoints
 /* ===== == = === 20em (320px) === = == ===== */
 $screen-xs: "(min-width: 20em)";
@@ -35,3 +11,32 @@ $screen-lg: "(min-width: 68.75em)";
 $screen-xl: "(min-width: 81.25em)";
 /* ===== == = === 112.5em (1800px) === = == ===== */
 $screen-xxl: "(min-width: 112.5em)";
+
+
+
+:root {
+  --bg-color: #000;
+  --text-color: #fff;
+
+  --black: #000;
+  --white: #fff;
+
+  --ratio: 1.125;
+
+  @media #{$screen-md} {
+    --ratio: 1.25;
+  }
+
+  --base-size: 1em;
+
+  --spacing-xs: calc( var(--base-size) / (2 * var(--ratio) ) );
+  --spacing-sm: calc( var(--base-size) / var(--ratio) );
+  --spacing-base: var(--base-size);
+  --spacing-md: calc( var(--base-size) * (2 * var(--ratio) ) );
+  --spacing-lg: calc( var(--base-size) * (3 * var(--ratio) ) );
+  --spacing-xl: calc( var(--base-size) * (4 * var(--ratio) ) );
+  --spacing-xxl: calc( var(--base-size) * (45* var(--ratio) ) );
+
+  --letter-spacing-base: 0.02em;
+  --letter-spacing-lg: 0.1em;
+}
