--- a/assets/scss/partials/_header.scss
+++ b/assets/scss/partials/_header.scss
@@ -4,8 +4,13 @@
   justify-content: space-between;
 
   &__title {
-    font-family: "Habitas-Bold";
-    font-size: var(--spacing-md);
+    font-family: "Habitas-Medium";
+    font-size: 3vw;
+    margin-left: -0.2vw;
+
+    &--i {
+      text-transform: lowercase;
+    }
   }
 
   &__title,
@@ -14,8 +19,8 @@
   }
 
   &__subtitle {
+    line-height: 0.7;
+    font-size: 1.4vw;
     font-weight: 300;
   }
-
-
 }
