--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,23 +1,23 @@
 <header class="header">
 
 	<a href="">
-		<h1 class="header__title">{{ .Site.Title }}</h1>
+		<h1 class="header__title">N<span class="header__title--i">i</span>na Regl<span class="header__title--i">i</span></h1>
 		<h2 class="header__subtitle">{{ $.Site.Params.subtitle }}</h2>
 	</a>
 
 	<nav class="header__nav">
 		<ul class="nav">
 			<li class="nav__item">
-				<a href="#work" class="hoverable nav__link">Work</a>
+				<a href="#work" class="nav__link">Work</a>
 			</li>
 			<li class="nav__item">
-				<a href="#about" class="hoverable nav__link">About</a>
+				<a href="#about" class="nav__link">About</a>
 			</li>
 			<li class="nav__item">
-				<a href="#quotes" class="hoverable nav__link">Quotes</a>
+				<a href="#quotes" class="nav__link">Quotes</a>
 			</li>
 			<li class="nav__item">
-				<a href="#contact" class="hoverable nav__link">Contact</a>
+				<a href="#contact" class="nav__link">Contact</a>
 			</li>
 		</ul>
 	</nav>
