--- a/layouts/partials/work.html
+++ b/layouts/partials/work.html
@@ -15,18 +15,29 @@
           {{ .title }}
             <span class="client__button--plus">+</span>
           </span>
+          <span class="client__button--close">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48">
+              <g fill="#FFF" fill-rule="nonzero">
+                <path d="M24 21 45 0l3 3-21 21 21 21-3 3-21-21L3 48l-3-3 21-21L0 3l3-3z"/>
+                <path d="M24 21 45 0l3 3-21 21 21 21-3 3-21-21L3 48l-3-3 21-21L0 3l3-3z"/>
+              </g>
+            </svg>
+          </span>
         </button>
 
-        <div class="client__information hide" id='section_{{$.Scratch.Get "counter"}}'>
+        <div class="client__content hide" id='section_{{$.Scratch.Get "counter"}}'>
+
+          <div class="client__video video">
+            <div class="video__wrapper">
+              <iframe src="https://player.vimeo.com/video/{{ .video }}?title=0&byline=0&portrait=0&transparent=0&muted=1&loop=1&autopause=0&autoplay=1" width="640" height="480" frameborder="0" title="{{ .title }}" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" data-ready="true" allow="autoplay"></iframe>
+            </div>
+          </div>
 
           <div class="client__textWrapper">
-            <p class="client__work"> {{ .work }} </p>
 
-            <div class="client__video video">
-              <div class="video__wrapper">
-                <iframe src="https://player.vimeo.com/video/{{ .video }}?title=0&byline=0&portrait=0&transparent=0&muted=1&loop=1&autopause=0&autoplay=1" width="640" height="480" frameborder="0" title="{{ .title }}" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" data-ready="true" allow="autoplay"></iframe>
-              </div>
-            </div>
+            <p class="client__work"> {{ .work }} </p>
+            <p class="client__about"> {{ .about }} </p>
+            <p class="client__tech"> {{ .tech }} </p>
 
             <a class="client__link" href="{{ .url }}" target_="blank" >View Website</a>
           </div>
