fix(work)accordion not working anymore cause of the button spans, change from target to currenttarget

--- a/assets/scss/partials/_client.scss
+++ b/assets/scss/partials/_client.scss
@@ -14,6 +14,10 @@
       .client__button {
         color: var(--white);
       }
+
+      .client__button--close svg path{
+        fill: var(--white);
+      }
     }
 
     &.petition {
@@ -30,6 +34,10 @@
 
       .client__button {
         color: var(--white);
+      }
+
+      .client__button--close svg path{
+        fill: var(--white);
       }
     }
 
@@ -60,6 +68,10 @@
       .client__button {
         color: var(--white);
       }
+
+      .client__button--close svg path{
+        fill: var(--white);
+      }
     }
 
     &.wide {
@@ -68,6 +80,10 @@
 
       .client__button {
         color: var(--white);
+      }
+
+      .client__button--close svg path{
+        fill: var(--white);
       }
     }
   }
@@ -84,7 +100,7 @@
   &__buttonText {
     position: relative;
     display: inline-block;
-    font-size: var(--spacing-lg);
+    font-size: var(--spacing-xl);
     // for scaling the text
     will-change: transform;
     transform-origin: center;
@@ -96,10 +112,17 @@
 
   &__button--close {
     position: absolute;
-    right: var(--spacing-sm);
-    top: var(--spacing-sm);
-    width: var(--spacing-md);
-    height: var(--spacing-md);
+    top: 0;
+    right: 0;
+    padding: var(--spacing-xs);
+    width: var(--spacing-xl);
+    height: var(--spacing-xl);
+    opacity: 0;
+
+    .active & {
+      opacity: 1;
+      transition: all 0.5s;
+    }
   }
 
   &__content {
